[project]
name = "saga-project"
version = "0.1.0"
description = "Оркестраторная Saga для управления заказами"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "psycopg2-binary",
    "alembic",
    "python-multipart",
    "jinja2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "testcontainers[postgres]",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
